welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {def faireV() {avance();baisseBrosse(); leveBrosse(); gauche(); avance(); droite()
^PictureMono2:1: error: expected start of definition
override def run() {def faireV() {avance();baisseBrosse(); leveBrosse(); gauche(); avance(); droite()
         ^