welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {def faireV() {avance();baisseBrosse(); leveBrosse(); gauche(); avance(); droite()
; avance();baisseBrosse(); leveBrosse(); avance(); droite(); avance(); baisseBrosse(); leveBrosse()
;gauche(); avance(); gauche(); for (j<-1 to 5) {avance() }
for (i<-1 to 4) {faireV()}
}
